Add course listing filters.

--- a/analytics_dashboard/core/templates/core/landing.html
+++ b/analytics_dashboard/core/templates/core/landing.html
@@ -12,7 +12,7 @@
 {% block body %}
     <body class="landing">
         <div id="wrap-content-push-footer">
-            <a href="#content" class="skip-link">{% trans 'Skip to content' %}</a>
+            <a id="skip" href="#content" class="skip-link">{% trans 'Skip to content' %}</a>
             {% include "_skip_link.html" with content_id="content" %}
             <header class="navbar navbar-default" id="nav">
                 <div class="grid-container grid-manual">
