--- a/analytics_dashboard/templates/_skip_link.html
+++ b/analytics_dashboard/templates/_skip_link.html
@@ -1,3 +1,3 @@
 {% load i18n %}
 
-<a href="#{{ content_id }}" class="skip-link">{% trans 'Skip to content' %}</a>
+<a id="skip" href="#{{ content_id }}" class="skip-link">{% trans 'Skip to content' %}</a>
