--- a/analytics_dashboard/static/sass/_mixins.scss
+++ b/analytics_dashboard/static/sass/_mixins.scss
@@ -68,17 +68,37 @@
     padding-bottom: 5px;
   }
 
-  th {
+  thead tr th {
 
     font-weight: 600;
 
     a {
-      // update header colors
       color: $text-color;
     }
 
+    button {
+      // update header colors
+      color: $text-color;
+
+      // the following overrides the button styling with link styling
+      @extend a;
+      border: none;
+      background: none;
+      padding: 0;
+      text-align: left;
+
+      &:hover {
+        text-decoration: underline;
+      }
+
+      &:focus {
+        text-decoration: underline;
+        outline: 1px black dotted;
+      }
+    }  
+
   }
-  
+
   .#{$app-name}-table-controls {
     padding-bottom: 20px;
 
